tests/machine/x/go/group_by_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_join.go:13:17: undefined: CustomersItem
../../../tests/machine/x/go/group_by_join.go:16:5: undefined: CustomersItem
../../../tests/machine/x/go/group_by_join.go:20:14: undefined: OrdersItem
../../../tests/machine/x/go/group_by_join.go:23:5: undefined: OrdersItem
../../../tests/machine/x/go/group_by_join.go:26:5: undefined: OrdersItem
../../../tests/machine/x/go/group_by_join.go:30:20: undefined: Stats
../../../tests/machine/x/go/group_by_join.go:60:16: undefined: Stats
../../../tests/machine/x/go/group_by_join.go:62:30: undefined: Stats

1: //go:build ignore
